--- a/analysis/prediction/driver_classification/algorithm_comparison.ipynb
+++ b/analysis/prediction/driver_classification/algorithm_comparison.ipynb
@@ -42,31 +42,7 @@
     {
      "data": {
       "text/markdown": [
-       "<span style=\"color:red\">⚠️ Please activate the **imp-ann_env** conda environment to work with this notebook:</span>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "<span style=\"color:blue\">&emsp;&emsp;&emsp;$ source activate imp-ann_env</span>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "&emsp;&emsp;&emsp;current environment: "
+       "<span style=\"color:green\">✅ Working on **imp-ann_env** conda environment.</span>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
