final repository clean

--- a/analysis/prediction/cluster_job_tutorial.ipynb
+++ b/analysis/prediction/cluster_job_tutorial.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -139,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run model... done! (19.55s)\n"
+      "Run model... done! (20.14s)\n"
      ]
     }
    ],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "'artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB/script.ipy'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -559,23 +559,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "➞ scp artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB to guilminp@selene.mskcc.org:/home/guilminp/impact-annotator/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB\n",
-      "script.ipy                                    100%  968     2.4KB/s   00:00    \n",
-      "X.pkl                                         100%   50MB   8.3MB/s   00:06    \n",
-      "y.pkl                                         100% 3736KB   7.2MB/s   00:00    \n",
+      "➞ scp artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB to guilminp@selene.mskcc.org:/home/guilminp/impact-annotator_v2/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB\n",
+      "script.ipy                                    100%  968   118.2KB/s   00:00    \n",
+      "X.pkl                                         100%   50MB  13.9MB/s   00:03    \n",
+      "y.pkl                                         100% 3736KB  14.1MB/s   00:00    \n",
       "➞ logged in /home/guilminp on selene.cbio.private\n",
       "➞ load ~/.bash_profile\n",
       "Hi Pierre!\n",
       "➞ work on imp-ann_env python virtualenv\n",
-      "➞ rm metrics.pkl & job_output.txt in /home/guilminp/impact-annotator/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB\n",
-      "Job <30686480> is submitted to default queue <sol>.\n",
+      "➞ rm metrics.pkl & job_output.txt in /home/guilminp/impact-annotator_v2/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB\n",
+      "Job <31381779> is submitted to default queue <sol>.\n",
       "➞ bsub command used: $ bsub -o job_output.txt -J cluster_tutorial_Gaussian_NB -We 59 \"ipython script.ipy\"\n"
      ]
     },
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -671,9 +671,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "➞ scp metrics.pkl & job_output.txt from guilminp@selene.mskcc.org:/home/guilminp/impact-annotator/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB to artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB\n",
-      "metrics.pkl                                   100% 7537KB   8.5MB/s   00:00    \n",
-      "job_output.txt                                100% 1444   269.7KB/s   00:00    \n",
+      "➞ scp metrics.pkl & job_output.txt from guilminp@selene.mskcc.org:/home/guilminp/impact-annotator_v2/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB to artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB\n",
+      "metrics.pkl                                   100% 7537KB   8.9MB/s   00:00    \n",
+      "job_output.txt                                100% 1286   307.7KB/s   00:00    \n",
       "➞ load metrics.pkl in object self.metrics\n"
      ]
     }
@@ -683,8 +683,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the job results have been downloaded on your local computer you can also get the results from the local job directory:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:green\">Job < cluster_tutorial_Gaussian_NB >: </span>✅ local results found<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "➞ load metrics.pkl in object self.metrics\n"
+     ]
+    }
+   ],
+   "source": [
+    "job.get_local_results()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "⚠️ This means there are two copies of the job results, one on the cluster and one on your local computer, one may be different from the other so be sure to always use `job.get_results()` to get the most recent results (the ones on the cluster)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -718,35 +761,35 @@
       "  → score_name_2: [test_score_2 | train_score_2]\n",
       "  → ...\n",
       "\n",
-      "Fold 1: [2.76s | 4.14s]\n",
+      "Fold 1: [4.71s | 0.55s]\n",
       "  → average_precision: [0.231 | 0.238]\n",
       "  → roc_auc          : [0.801 | 0.813]\n",
       "  → precision        : [0.367 | 0.366]\n",
       "  → recall           : [0.364 | 0.368]\n",
       "  → f1               : [0.365 | 0.367]\n",
       "  → accuracy         : [0.961 | 0.961]\n",
-      "Fold 2: [7.25s | 0.48s]\n",
+      "Fold 2: [0.85s | 0.41s]\n",
       "  → average_precision: [0.246 | 0.234]\n",
       "  → roc_auc          : [0.820 | 0.808]\n",
       "  → precision        : [0.376 | 0.366]\n",
       "  → recall           : [0.368 | 0.367]\n",
       "  → f1               : [0.372 | 0.366]\n",
       "  → accuracy         : [0.962 | 0.961]\n",
-      "Fold 3: [7.04s | 0.48s]\n",
+      "Fold 3: [0.90s | 0.43s]\n",
       "  → average_precision: [0.236 | 0.231]\n",
       "  → roc_auc          : [0.815 | 0.805]\n",
       "  → precision        : [0.400 | 0.403]\n",
       "  → recall           : [0.356 | 0.350]\n",
       "  → f1               : [0.377 | 0.375]\n",
       "  → accuracy         : [0.964 | 0.964]\n",
-      "Fold 4: [2.83s | 0.49s]\n",
+      "Fold 4: [0.87s | 0.43s]\n",
       "  → average_precision: [0.251 | 0.237]\n",
       "  → roc_auc          : [0.814 | 0.811]\n",
       "  → precision        : [0.377 | 0.362]\n",
       "  → recall           : [0.379 | 0.362]\n",
       "  → f1               : [0.378 | 0.362]\n",
       "  → accuracy         : [0.962 | 0.961]\n",
-      "Fold 5: [1.59s | 0.49s]\n",
+      "Fold 5: [0.89s | 0.43s]\n",
       "  → average_precision: [0.221 | 0.245]\n",
       "  → roc_auc          : [0.802 | 0.817]\n",
       "  → precision        : [0.346 | 0.367]\n",
@@ -762,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +886,7 @@
      "output_type": "stream",
      "text": [
       "➞ rm on local computer artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB\n",
-      "➞ rm on cluster /home/guilminp/impact-annotator/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB\n"
+      "➞ rm on cluster /home/guilminp/impact-annotator_v2/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_Gaussian_NB\n"
      ]
     },
     {
@@ -879,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1069,6 @@
     "\n",
     "from imblearn.pipeline import make_pipeline\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "# choose a model and run it\n",
@@ -1053,23 +1095,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "➞ scp artefact_classification/ssh_remote_jobs/job_cluster_tutorial_GS_Random_Forest to guilminp@selene.mskcc.org:/home/guilminp/impact-annotator/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_GS_Random_Forest\n",
-      "script.ipy                                    100% 1440     3.7KB/s   00:00    \n",
-      "X.pkl                                         100%   50MB   9.9MB/s   00:05    \n",
-      "y.pkl                                         100% 3736KB  16.0MB/s   00:00    \n",
+      "➞ scp artefact_classification/ssh_remote_jobs/job_cluster_tutorial_GS_Random_Forest to guilminp@selene.mskcc.org:/home/guilminp/impact-annotator_v2/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_GS_Random_Forest\n",
+      "script.ipy                                    100% 1391   148.8KB/s   00:00    \n",
+      "X.pkl                                         100%   50MB  16.6MB/s   00:03    \n",
+      "y.pkl                                         100% 3736KB   4.0MB/s   00:00    \n",
       "➞ logged in /home/guilminp on selene.cbio.private\n",
       "➞ load ~/.bash_profile\n",
       "Hi Pierre!\n",
       "➞ work on imp-ann_env python virtualenv\n",
-      "➞ rm metrics.pkl & job_output.txt in /home/guilminp/impact-annotator/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_GS_Random_Forest\n",
-      "Job <30686430> is submitted to default queue <sol>.\n",
+      "➞ rm metrics.pkl & job_output.txt in /home/guilminp/impact-annotator_v2/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_GS_Random_Forest\n",
+      "Job <31381782> is submitted to default queue <sol>.\n",
       "➞ bsub command used: $ bsub -o job_output.txt -J cluster_tutorial_GS_Random_Forest -We 59 -n 20 -R \"span[ptile=5,mem=8]\" \"ipython script.ipy\"\n"
      ]
     },
@@ -1092,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1114,13 +1156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<span style=\"color:red\">Job < cluster_tutorial_GS_Random_Forest >: </span>⚠️ does not exist on the cluster, is not done yet or an error occured before the creation of `metrics.pkl`<br>"
+       "<span style=\"color:green\">Job < cluster_tutorial_GS_Random_Forest >: </span>✅ finished<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1128,6 +1170,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "➞ scp metrics.pkl & job_output.txt from guilminp@selene.mskcc.org:/home/guilminp/impact-annotator_v2/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_GS_Random_Forest to artefact_classification/ssh_remote_jobs/job_cluster_tutorial_GS_Random_Forest\n",
+      "metrics.pkl                                   100% 5892KB   8.6MB/s   00:00    \n",
+      "job_output.txt                                100% 1465   191.6KB/s   00:00    \n",
+      "➞ load metrics.pkl in object self.metrics\n"
+     ]
     }
    ],
    "source": [
@@ -1136,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1223,7 @@
       "  → ...\n",
       "  → best hyperparameters: {'hyperparameter_name_1': best_value, ...}\n",
       "\n",
-      "Fold 1: [71.93s | 0.81s]\n",
+      "Fold 1: [39.49s | 0.94s]\n",
       "  → average_precision: [0.460 | 0.515]\n",
       "  → roc_auc          : [0.864 | 0.889]\n",
       "  → precision        : [0.158 | 0.167]\n",
@@ -1179,7 +1231,7 @@
       "  → f1               : [0.257 | 0.272]\n",
       "  → accuracy         : [0.879 | 0.880]\n",
       "  → best hyperparameters: {'randomforestclassifier__criterion': 'gini', 'randomforestclassifier__max_depth': 10, 'randomforestclassifier__n_estimators': 30}\n",
-      "Fold 2: [74.80s | 0.81s]\n",
+      "Fold 2: [39.84s | 0.97s]\n",
       "  → average_precision: [0.458 | 0.506]\n",
       "  → roc_auc          : [0.875 | 0.887]\n",
       "  → precision        : [0.170 | 0.174]\n",
@@ -1187,7 +1239,7 @@
       "  → f1               : [0.274 | 0.281]\n",
       "  → accuracy         : [0.887 | 0.888]\n",
       "  → best hyperparameters: {'randomforestclassifier__criterion': 'gini', 'randomforestclassifier__max_depth': 10, 'randomforestclassifier__n_estimators': 30}\n",
-      "Fold 3: [78.30s | 0.72s]\n",
+      "Fold 3: [39.84s | 0.98s]\n",
       "  → average_precision: [0.491 | 0.506]\n",
       "  → roc_auc          : [0.880 | 0.884]\n",
       "  → precision        : [0.168 | 0.169]\n",
@@ -1195,7 +1247,7 @@
       "  → f1               : [0.272 | 0.273]\n",
       "  → accuracy         : [0.883 | 0.884]\n",
       "  → best hyperparameters: {'randomforestclassifier__criterion': 'gini', 'randomforestclassifier__max_depth': 10, 'randomforestclassifier__n_estimators': 30}\n",
-      "Fold 4: [82.12s | 1.80s]\n",
+      "Fold 4: [39.71s | 0.93s]\n",
       "  → average_precision: [0.493 | 0.505]\n",
       "  → roc_auc          : [0.884 | 0.884]\n",
       "  → precision        : [0.181 | 0.185]\n",
@@ -1203,7 +1255,7 @@
       "  → f1               : [0.289 | 0.293]\n",
       "  → accuracy         : [0.894 | 0.896]\n",
       "  → best hyperparameters: {'randomforestclassifier__criterion': 'gini', 'randomforestclassifier__max_depth': 10, 'randomforestclassifier__n_estimators': 30}\n",
-      "Fold 5: [72.76s | 0.70s]\n",
+      "Fold 5: [39.79s | 0.93s]\n",
       "  → average_precision: [0.459 | 0.510]\n",
       "  → roc_auc          : [0.861 | 0.887]\n",
       "  → precision        : [0.156 | 0.166]\n",
@@ -1220,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1384,7 @@
      "output_type": "stream",
      "text": [
       "➞ rm on local computer artefact_classification/ssh_remote_jobs/job_cluster_tutorial_GS_Random_Forest\n",
-      "➞ rm on cluster /home/guilminp/impact-annotator/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_GS_Random_Forest\n"
+      "➞ rm on cluster /home/guilminp/impact-annotator_v2/analysis/prediction/artefact_classification/ssh_remote_jobs/job_cluster_tutorial_GS_Random_Forest\n"
      ]
     },
     {
