final repository clean

--- a/analysis/prediction/artefact_classification/groupfold_cross_validation.ipynb
+++ b/analysis/prediction/artefact_classification/groupfold_cross_validation.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -316,8 +316,8 @@
      "output_type": "stream",
      "text": [
       "➞ scp metrics.pkl & job_output.txt from guilminp@selene.mskcc.org:/home/guilminp/impact-annotator_v2/analysis/prediction/artefact_classification/ssh_remote_jobs/job_gkf_baseline to ssh_remote_jobs/job_gkf_baseline\n",
-      "metrics.pkl                                   100%   74MB   7.2MB/s   00:10    \n",
-      "job_output.txt                                100% 1523     9.5KB/s   00:00    \n",
+      "metrics.pkl                                   100%   74MB  10.5MB/s   00:07    \n",
+      "job_output.txt                                100% 1523   378.5KB/s   00:00    \n",
       "➞ load metrics.pkl in object self.metrics\n"
      ]
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -567,8 +567,8 @@
      "output_type": "stream",
      "text": [
       "➞ scp metrics.pkl & job_output.txt from guilminp@selene.mskcc.org:/home/guilminp/impact-annotator_v2/analysis/prediction/artefact_classification/ssh_remote_jobs/job_gkf_mut_key to ssh_remote_jobs/job_gkf_mut_key\n",
-      "metrics.pkl                                   100% 7470KB   8.3MB/s   00:00    \n",
-      "job_output.txt                                100% 1401     4.5KB/s   00:00    \n",
+      "metrics.pkl                                   100% 7470KB   9.3MB/s   00:00    \n",
+      "job_output.txt                                100% 1401    61.0KB/s   00:00    \n",
       "➞ load metrics.pkl in object self.metrics\n"
      ]
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -818,8 +818,8 @@
      "output_type": "stream",
      "text": [
       "➞ scp metrics.pkl & job_output.txt from guilminp@selene.mskcc.org:/home/guilminp/impact-annotator_v2/analysis/prediction/artefact_classification/ssh_remote_jobs/job_gkf_patient_key to ssh_remote_jobs/job_gkf_patient_key\n",
-      "metrics.pkl                                   100% 7527KB   5.5MB/s   00:01    \n",
-      "job_output.txt                                100% 1413    62.2KB/s   00:00    \n",
+      "metrics.pkl                                   100% 7527KB   8.9MB/s   00:00    \n",
+      "job_output.txt                                100% 1413   103.7KB/s   00:00    \n",
       "➞ load metrics.pkl in object self.metrics\n"
      ]
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -885,27 +885,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "    #T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow0_col0 {\n",
+       "    #T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow0_col0 {\n",
        "            background-color:  salmon;\n",
-       "        }    #T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow0_col1 {\n",
+       "        }    #T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow0_col1 {\n",
        "            background-color:  salmon;\n",
-       "        }    #T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow0_col2 {\n",
+       "        }    #T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow0_col2 {\n",
        "            background-color:  salmon;\n",
-       "        }    #T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow0_col3 {\n",
+       "        }    #T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow0_col3 {\n",
        "            background-color:  salmon;\n",
-       "        }    #T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow0_col4 {\n",
+       "        }    #T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow0_col4 {\n",
        "            background-color:  salmon;\n",
-       "        }    #T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow0_col5 {\n",
+       "        }    #T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow0_col5 {\n",
        "            background-color:  salmon;\n",
        "        }</style>  \n",
-       "<table id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cf\" > \n",
+       "<table id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cf\" > \n",
        "<thead>    <tr> \n",
        "        <th class=\"blank level0\" ></th> \n",
        "        <th class=\"col_heading level0 col0\" >test_average_precision_mean</th> \n",
@@ -924,34 +924,34 @@
        "        <th class=\"blank\" ></th> \n",
        "    </tr></thead> \n",
        "<tbody>    <tr> \n",
-       "        <th id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cflevel0_row0\" class=\"row_heading level0 row0\" >baseline</th> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow0_col0\" class=\"data row0 col0\" >0.505</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow0_col1\" class=\"data row0 col1\" >0.888</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow0_col2\" class=\"data row0 col2\" >0.164</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow0_col3\" class=\"data row0 col3\" >0.739</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow0_col4\" class=\"data row0 col4\" >0.269</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow0_col5\" class=\"data row0 col5\" >0.878</td> \n",
+       "        <th id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cflevel0_row0\" class=\"row_heading level0 row0\" >baseline</th> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow0_col0\" class=\"data row0 col0\" >0.505</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow0_col1\" class=\"data row0 col1\" >0.888</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow0_col2\" class=\"data row0 col2\" >0.164</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow0_col3\" class=\"data row0 col3\" >0.739</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow0_col4\" class=\"data row0 col4\" >0.269</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow0_col5\" class=\"data row0 col5\" >0.878</td> \n",
        "    </tr>    <tr> \n",
-       "        <th id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cflevel0_row1\" class=\"row_heading level0 row1\" >mut_key</th> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow1_col0\" class=\"data row1 col0\" >0.496</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow1_col1\" class=\"data row1 col1\" >0.882</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow1_col2\" class=\"data row1 col2\" >0.162</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow1_col3\" class=\"data row1 col3\" >0.734</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow1_col4\" class=\"data row1 col4\" >0.266</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow1_col5\" class=\"data row1 col5\" >0.877</td> \n",
+       "        <th id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cflevel0_row1\" class=\"row_heading level0 row1\" >mut_key</th> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow1_col0\" class=\"data row1 col0\" >0.496</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow1_col1\" class=\"data row1 col1\" >0.882</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow1_col2\" class=\"data row1 col2\" >0.162</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow1_col3\" class=\"data row1 col3\" >0.734</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow1_col4\" class=\"data row1 col4\" >0.266</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow1_col5\" class=\"data row1 col5\" >0.877</td> \n",
        "    </tr>    <tr> \n",
-       "        <th id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cflevel0_row2\" class=\"row_heading level0 row2\" >patient_key</th> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow2_col0\" class=\"data row2 col0\" >0.49</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow2_col1\" class=\"data row2 col1\" >0.873</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow2_col2\" class=\"data row2 col2\" >0.16</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow2_col3\" class=\"data row2 col3\" >0.71</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow2_col4\" class=\"data row2 col4\" >0.26</td> \n",
-       "        <td id=\"T_c66e6f88_ff11_11e8_8a7f_acbc328495cfrow2_col5\" class=\"data row2 col5\" >0.877</td> \n",
+       "        <th id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cflevel0_row2\" class=\"row_heading level0 row2\" >patient_key</th> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow2_col0\" class=\"data row2 col0\" >0.49</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow2_col1\" class=\"data row2 col1\" >0.873</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow2_col2\" class=\"data row2 col2\" >0.16</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow2_col3\" class=\"data row2 col3\" >0.71</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow2_col4\" class=\"data row2 col4\" >0.26</td> \n",
+       "        <td id=\"T_c8979ad8_0930_11e9_b2c8_acbc328495cfrow2_col5\" class=\"data row2 col5\" >0.877</td> \n",
        "    </tr></tbody> \n",
        "</table> "
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1a53a92278>"
+       "<pandas.io.formats.style.Styler at 0x1a34699828>"
       ]
      },
      "metadata": {},
